spring-boot/http-roll-dice/src/main/jkube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    camel.apache.org/integration: roll-dice
    app.kubernetes.io/runtime: camel
  name: roll-dice
spec:
  selector:
    matchLabels:
      camel.apache.org/integration: roll-dice
  template:
    metadata:
      labels:
        camel.apache.org/integration: roll-dice
    spec:
      containers:
      - image: examples/roll-dice:1.0.0
        imagePullPolicy: IfNotPresent
        name: roll-dice
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
