spring-boot/http-roll-dice/src/main/jkube/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    camel.apache.org/integration: roll-dice
    app.kubernetes.io/runtime: camel
  name: roll-dice
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    camel.apache.org/integration: roll-dice
  type: NodePort
