spring-boot/http-roll-dice/src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roll-dice
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: roll-dice
            port:
              name: http
        path: /
        pathType: Prefix
